@@ -1,4 +1,4 @@
-AC_INIT(fuse, 2.3-pre7)
+AC_INIT(fuse, 2.3-pre8)
 AM_INIT_AUTOMAKE
 AM_CONFIG_HEADER(include/config.h)
 
